--- a/index.html
+++ b/index.html
@@ -486,6 +486,27 @@
                             </div>
                         </div>
 
+                        <!-- New button for "More Details" -->
+                        <div class="text-center mt-4">
+                            <button id="showTopTotalViewsTableBtn" class="px-4 py-2 rounded-md bg-sky-600 text-white shadow-sm font-semibold hover:bg-sky-700 transition-colors duration-200">More Details</button>
+                        </div>
+
+                        <!-- New table for Top 10 Profiles by Total Views (initially hidden) -->
+                        <div id="topTotalViewsTableContainer" class="overflow-x-auto mt-8 hidden">
+                            <table class="min-w-full rounded-lg overflow-hidden shadow-sm border border-slate-200">
+                                <thead class="bg-slate-100 border-b border-slate-200">
+                                    <tr>
+                                        <th class="px-4 py-3 text-left text-xs font-semibold text-slate-700 uppercase tracking-wider">Profile Name</th>
+                                        <th class="px-4 py-3 text-left text-xs font-semibold text-slate-700 uppercase tracking-wider">Number of Clips</th>
+                                        <th class="px-4 py-3 text-left text-xs font-semibold text-slate-700 uppercase tracking-wider">Avg. Views Per Clip</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="topTotalViewsTableBody" class="divide-y divide-slate-200 text-sm text-slate-700">
+                                    <!-- Data will be inserted here by JavaScript -->
+                                </tbody>
+                            </table>
+                        </div>
+
                         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-start">
                             <div class="mt-8 lg:mt-0 lg:order-2">
                                 <h3 class="text-2xl font-bold text-[#005f73] mb-4">Masters of Efficiency: Top 10 by Average Views</h3>
@@ -1243,6 +1264,7 @@
                             setTimeout(() => { 
                                 initializeThirdPartyJulyCharts();
                                 populateLowTitlesTable(); // Populate low titles table
+                                populateTopTotalViewsTable(); // Populate the new table
                                 generateRecommendations();
                             }, 500); // Increased timeout to 500ms
                         }
@@ -1306,6 +1328,7 @@
                             setTimeout(() => { 
                                 initializeThirdPartyJulyCharts();
                                 populateLowTitlesTable(); // Populate low titles table
+                                populateTopTotalViewsTable(); // Populate the new table
                                 generateRecommendations();
                             }, 500); // Increased timeout to 500ms
                         }
@@ -1515,6 +1538,36 @@
                     }
                 });
             }
+
+            // Function to populate the new Top 10 Total Views table
+            function populateTopTotalViewsTable() {
+                const tableBody = document.getElementById('topTotalViewsTableBody');
+                if (!tableBody) return;
+                tableBody.innerHTML = ''; // Clear existing rows
+
+                const top10TotalViews = [...thirdPartyJulyProfileData].sort((a, b) => b.totalViews - a.totalViews).slice(0, 10);
+
+                top10TotalViews.forEach(item => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td class="px-4 py-2 whitespace-nowrap">${item.name}</td>
+                        <td class="px-4 py-2 whitespace-nowrap">${item.clips}</td>
+                        <td class="px-4 py-2 whitespace-nowrap">${item.avgViews.toFixed(1)}</td>
+                    `;
+                    tableBody.appendChild(row);
+                });
+            }
+
+            // Event listener for the new "More Details" button
+            const showTopTotalViewsTableBtn = document.getElementById('showTopTotalViewsTableBtn');
+            const topTotalViewsTableContainer = document.getElementById('topTotalViewsTableContainer');
+
+            if (showTopTotalViewsTableBtn && topTotalViewsTableContainer) {
+                showTopTotalViewsTableBtn.addEventListener('click', () => {
+                    topTotalViewsTableContainer.classList.toggle('hidden');
+                });
+            }
+
 
             // Function to generate reasons for low performance using LLM
             async function generateLowPerformanceReasons(lowTitlesData) {
